--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,11 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "mcp-nefino"
 version = "0.1.0"
 description = "MCP server for accessing Nefino renewable energy news API"
-readme = "README.md"
+authors = [{ name = "David Kort", email = "david.kort@nefino.de" }]
 requires-python = ">=3.10"
+readme = "README.md"
 license = "Apache-2.0"
-authors = [
-    { name = "David Kort", email = "david.kort@nefino.de" }
-]
 dependencies = [
     "mcp",
     "requests",
@@ -22,6 +16,13 @@ dependencies = [
 
 [project.scripts]
 mcp-nefino = "mcp_nefino.server:mcp.run"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.uv]
+package = false
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/mcp_nefino"]
