--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.10"
 readme = "README.md"
 license = "Apache-2.0"
 dependencies = [
-    "mcp",
+    "mcp>=1.3.0",
     "requests",
     "python-jose",
     "pydantic",
