--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcp-nefino"
-version = "0.1.1"
+version = "0.1.3"
 description = "MCP server for accessing Nefino renewable energy news API"
 authors = [{ name = "David Kort", email = "david.kort@nefino.de" }]
 requires-python = ">=3.10"
@@ -12,6 +12,7 @@ dependencies = [
     "python-jose",
     "pydantic",
     "fastapi",
+    "aiohttp",
 ]
 
 [project.scripts]
